# alpha-quant-pairs-trading

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pairstrading/: __init__.py
src/pairstrading/backtest/: engine.py  execution.py
src/pairstrading/data/: ingestor.py
src/pairstrading/models/: cointegration.py
src/pairstrading/models/advanced/: johansen.py  kalman.py
src/pairstrading/portfolio/: allocation.py  selection.py
src/pairstrading/risk/: advanced.py  performance.py
src/pairstrading/strategy/: signals.py
tests/: test_pairs.py
